--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,10 +12,10 @@
   <script type="text/javascript" src="lib/jasmine-2.0.2/boot.js"></script>
 
   <!-- include source files here... -->
-  <script type="text/javascript" src="src/rps_java.js"></script>
+  <script type="text/javascript" src="src/rpsJava.js"></script>
 
   <!-- include spec files here... -->
-  <script type="text/javascript" src="spec/rps_java.js"></script>
+  <script type="text/javascript" src="spec/rpsJavaSpec.js"></script>
 
 </head>
 
