--- a/public/index.html
+++ b/public/index.html
@@ -8,15 +8,18 @@
         <h1>
           ROCK. PAPER. SCISSORS
         </h1>
-        <h2>
-          Make your choice
-        </h2>
       </header>
       <section class='images'>
-        <img alt='Rock' src='images/rock.jpg'>
-        <img alt='Paper' src='images/paper.jpg'>
-        <img alt='Scissors' src='images/scissors.jpg'>
+        <img alt='Rock' id='rock' src='images/rock.jpg'>
+        <img alt='Paper' id='paper' src='images/paper.jpg'>
+        <img alt='Scissors' id='scissors' src='images/scissors.jpg'>
       </section>
+      <h2>
+        Make your choice
+      </h2>
+      <script src='js/jquery-2.1.1.min.js'></script>
+      <script src='js/rpsJava.js'></script>
+      <script src='js/rpsUi.js'></script>
     </body>
   </head>
 </html>
